# formulastypes

./: .ycm_extra_conf.py  CMakeLists.txt  Valuations.hs  fac-tmp.hpp  fibo-tmp.hpp  list-tmp.hpp  main.cpp  moveconstr.cpp  toy.hs
